PROJECT(QCurve)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8.5)
SET(CMAKE_AUTOMOC TRUE)

SET(QT_QMAKE_EXECUTABLE "/Users/GSIO01/QtSDK/Desktop/Qt/4.8.1/gcc/bin/qmake")

FIND_PACKAGE(Qt4 4.7 REQUIRED QtCore QtGui QtXml)

IF (CMAKE_COMPILER_IS_GNUCXX OR MINGW)
  ADD_DEFINITIONS("-Wall -Wextra")
ENDIF (CMAKE_COMPILER_IS_GNUCXX OR MINGW)

ADD_DEFINITIONS(-DQT_NO_STL -DQT_NO_CAST_TO_ASCII)

IF (${CMAKE_BUILD_TYPE} MATCHES "Release")
  ADD_DEFINITIONS("-O3")
  ADD_DEFINITIONS(-DNDEBUG)
  ADD_DEFINITIONS(-DQT_NO_DEBUG_OUTPUT)
  ADD_DEFINITIONS(-DQT_NO_WARNING_OUTPUT)
ENDIF (${CMAKE_BUILD_TYPE} MATCHES "Release")

INCLUDE_DIRECTORIES(${QT_INCLUDES} ${CMAKE_CURRENT_SOURCE_DIR}/src ${CMAKE_CURRENT_BINARY_DIR})

ADD_SUBDIRECTORY(icons)
ADD_SUBDIRECTORY(src)

SET (LANGUAGES po/trans_en.ts po/trans_de.ts)
QT4_ADD_TRANSLATION(TRANSLATIONS ${LANGUAGES})

IF (WIN32)
  QT4_ADD_RESOURCES(QCURVE_RES oxygen.qrc)

  IF (${CMAKE_BUILD_TYPE} MATCHES "Release")
    ADD_EXECUTABLE(QCurve WIN32 ${QCURVE_SRCS} ${QCURVE_RES} ${TRANSLATIONS})
  ELSE (${CMAKE_BUILD_TYPE} MATCHES "Release")
    ADD_EXECUTABLE(QCurve ${QCURVE_SRCS} ${QCURVE_RES} ${TRANSLATIONS})
  ENDIF (${CMAKE_BUILD_TYPE} MATCHES "Release")
ELSE (WIN32)
  ADD_EXECUTABLE(QCurve ${QCURVE_SRCS} ${TRANSLATIONS})
ENDIF (WIN32)

TARGET_LINK_LIBRARIES(QCurve ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} ${QT_QTXML_LIBRARY})

IF (UNIX)
  INSTALL(TARGETS QCurve RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
  SET(XDG_APPS_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}/share/applications")

  IF (UNIX AND NOT APPLE)
    INSTALL(FILES qcurve.desktop DESTINATION ${XDG_APPS_INSTALL_DIR})
  ENDIF(UNIX AND NOT APPLE)
ENDIF (UNIX)
